--- a/style.css
+++ b/style.css
@@ -40,3 +40,16 @@
   margin-top: 0px;
 }
 /* Akhir Desain */
+
+/* Awal Fitur */
+.b-example-divider {
+  background-color: rgba(0, 0, 0, 0.1);
+  border: solid rgba(0, 0, 0, 0.15);
+  border-width: 1px 0;
+  box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1), inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+}
+/* Awal Fitur */
+
+#fasilitas {
+  background-color: #f3f4f5;
+}
