--- a/style.css
+++ b/style.css
@@ -42,3 +42,20 @@
 #fasilitas {
   background-color: #f3f4f5;
 }
+
+#harga {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+#pricing-header {
+  max-width: 700px;
+}
+#harga .btn {
+  background-color: #00000080;
+  border: none;
+  border-radius: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-top: 0px;
+}
